--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				</hgroup>
 				<p>自我介绍：丑鬼一枚，努力减肥，努力学习，努力找对象，努力找工作，努力毕业，努力工作</p>
 			</section>
-			<a class="dwn-vcard fg-bgc" href="../文档/程然然简历" download="程然然简历"  target="_blank">Download 简历</a>
+			<a class="dwn-vcard fg-bgc" href="../文档/程然然简历" download="程然然简历.pdf"  target="_blank">Download 简历</a>
 				<!-- Social Icons -->
 			<!--
 			<ul class="social cover">
