--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<li>
 						<div class="label fg-bgc">Website</div>
 						<div class="corner fg-bdc"></div>
-						<div class="text"><a href="www.crrifonly.top" target="_blank">www.crrifonly.top</a></div>
+						<div class="text"><a href="index.html" target="_blank">www.crrifonly.top</a></div>
 					</li>
 					<li>
 						<div class="label fg-bgc">Address</div>
