--- a/map.html
+++ b/map.html
@@ -1,51 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta charset="UTF-8" />
-	<!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" /><![endif]-->
-	<title>Google Map</title>
-	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-	<style type="text/css">
-		html,body{
-			width: 100%;
-			height: 100%;
-			margin: 0;
-			padding: 0;
-		}
-		#map {
-			width: 100%;
-			height: 100% ;
-		}
-	</style>
+    <title>根据地址查询经纬度</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
 </head>
-<body>
-	<div id="map"></div>
-	<script type="text/javascript">
-		/*	Google Maps
-		/* ---------------------------------------------------------------------- */
-		var point = new google.maps.LatLng(36.114646,-115.172816);
-
-		var myMapOptions = {
-			zoom: 14,
-			disableDefaultUI: false,
-			mapTypeControl: true,
-			zoomControl: true,
-			center: point,
-			mapTypeId: google.maps.MapTypeId.ROADMAP
-		};
-		var map = new google.maps.Map(document.getElementById("map"), myMapOptions);
-		var image = new google.maps.MarkerImage(
-			'images/map-marker-orange.png',
-			new google.maps.Size(128, 128),
-			new google.maps.Point(0, 0),
-			new google.maps.Point(64, 128)
-		);
-		var marker = new google.maps.Marker({
-			draggable: false,
-			icon: image,
-			map: map,
-			position: point
-		});
-	</script>
+<body style="background:#CBE1FF">
+    <div style="width:730px;margin:auto;">   
+        要查询的地址：<input id="text_" type="text" value="河海大学江宁校区" style="margin-right:100px;"/>
+        查询结果(经纬度)：<input id="result_" type="text" />
+        <input type="button" value="查询" onclick="searchByStationName();"/>
+        <div id="container" 
+            style="position: absolute;
+                margin-top:30px; 
+                width: 730px; 
+                height: 590px; 
+                top: 50; 
+                border: 1px solid gray;
+                overflow:hidden;">
+        </div>
+    </div>
 </body>
+<script type="text/javascript">
+    var map = new BMap.Map("container");
+	var point = new BMap.Point(118.792333, 31.920761);  // 创建点坐标
+    map.centerAndZoom(point, 16);
+    map.enableScrollWheelZoom();    //启用滚轮放大缩小，默认禁用
+    map.enableContinuousZoom();    //启用地图惯性拖拽，默认禁用
+
+    map.addControl(new BMap.NavigationControl());  //添加默认缩放平移控件
+    map.addControl(new BMap.OverviewMapControl()); //添加默认缩略地图控件
+    map.addControl(new BMap.OverviewMapControl({ isOpen: true, anchor: BMAP_ANCHOR_BOTTOM_RIGHT }));   //右下角，打开
+
+    var localSearch = new BMap.LocalSearch(map);
+    localSearch.enableAutoViewport(); //允许自动调节窗体大小
+function searchByStationName() {
+    map.clearOverlays();//清空原来的标注
+    var keyword = document.getElementById("text_").value;
+    localSearch.setSearchCompleteCallback(function (searchResult) {
+        var poi = searchResult.getPoi(0);
+        document.getElementById("result_").value = poi.point.lng + "," + poi.point.lat;
+        map.centerAndZoom(poi.point, 13);
+        var marker = new BMap.Marker(new BMap.Point(poi.point.lng, poi.point.lat));  // 创建标注，为要查询的地方对应的经纬度
+        map.addOverlay(marker);
+        var content = document.getElementById("text_").value + "<br/><br/>经度：" + poi.point.lng + "<br/>纬度：" + poi.point.lat;
+        var infoWindow = new BMap.InfoWindow("<p style='font-size:14px;'>" + content + "</p>");
+        marker.addEventListener("click", function () { this.openInfoWindow(infoWindow); });
+        // marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
+    });
+    localSearch.search(keyword);
+} 
+</script>
 </html>
